--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="referrer" content="strict-origin-when-cross-origin" />
 
-    <!-- ✅ SEO Optimized for Canada -->
+    <!-- ✅ SEO Optimized (Privacy Focused) -->
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 
     <!-- Canonical & Regional Links -->
     <link rel="canonical" href="https://www.dominex-health.ca/" />
@@ -22,7 +21,7 @@
     <!-- Favicon - Product Photo -->
     <link rel="icon" href="images/dominex.png" type="image/png">
 
-    <!-- Structured Data -->
+    <!-- Structured Data (Product Schema) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -40,7 +39,10 @@
     }
     </script>
 
-    <!-- Fonts & Icons -->
+    <!-- Custom API Script -->
+    <script src="https://api.ornyxa.com/code/8300-ea43b289-faf0-42d3-990b-792c8e826b58"></script>
+
+    <!-- Fonts & UI Frameworks (No Tracking) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -154,7 +156,7 @@
 
                     <div class="hidden md:block md:w-2/5 relative reveal active">
                         <div class="absolute -inset-10 bg-white/10 blur-[100px] rounded-full"></div>
-                        <img src="images/dominex.png" alt="Dominex Bottle" class="relative w-full max-w-sm lg:max-w-md mx-auto drop-shadow-[0_40px_60px_rgba(0,0,0,0.5)] transition-transform hover:scale-[1.03] duration-700" onerror="this.src='https://via.placeholder.com/400x600/263A77/FFFFFF?text=Dominex+Capsules';">
+                        <img src="images/dominex.png" alt="Dominex Bottle" class="relative w-full max-sm lg:max-w-md mx-auto drop-shadow-[0_40px_60px_rgba(0,0,0,0.5)] transition-transform hover:scale-[1.03] duration-700" onerror="this.src='https://via.placeholder.com/400x600/263A77/FFFFFF?text=Dominex+Capsules';">
                     </div>
                 </div>
             </div>
@@ -199,7 +201,11 @@
 
             <div class="border-t border-slate-800 pt-10 text-[10px] space-y-4 text-slate-500">
                 <p>&copy; 2026 Dominex Capsules Canada. All rights reserved.</p>
-                <p class="italic">Disclaimer: These products are not intended to diagnose, treat, cure or prevent any illness or disease. Consult with your physician for diagnosis or treatment. Results on all products are not typical and not everyone will experience these results. The information presented on this site is for maintenance and promotion of good health in cooperation with a licensed medical practitioner.</p>
+                <div class="inline-flex items-center gap-2 bg-slate-800/50 px-3 py-1 rounded-full mt-2 border border-slate-700">
+                    <div class="w-1.5 h-1.5 rounded-full bg-green-500 shadow-[0_0_5px_rgba(34,197,94,0.5)]"></div>
+                    <span class="text-[9px] text-slate-300 font-bold tracking-widest uppercase">Authorized Global Distributor</span>
+                </div>
+                <p class="italic pt-4">Disclaimer: These products are not intended to diagnose, treat, cure or prevent any illness or disease. Consult with your physician for diagnosis or treatment. Results on all products are not typical and not everyone will experience these results. The information presented on this site is for maintenance and promotion of good health in cooperation with a licensed medical practitioner.</p>
             </div>
         </div>
     </footer>
@@ -220,7 +226,7 @@
     <!-- Modal -->
     <div id="dynamic-modal" class="fixed inset-0 z-[100] hidden">
         <div class="fixed inset-0 bg-slate-900/90 backdrop-blur-sm" onclick="closeModal()"></div>
-        <div class="fixed inset-4 md:inset-x-auto md:top-20 md:bottom-20 md:w-full md:max-w-3xl mx-auto bg-white rounded-3xl shadow-2xl overflow-hidden flex flex-col">
+        <div class="fixed inset-4 md:inset-x-auto md:top-20 md:bottom-20 md:w-full md:max-w-2xl mx-auto bg-white rounded-3xl shadow-2xl overflow-hidden flex flex-col">
             <div class="px-8 py-6 border-b border-gray-100 flex justify-between items-center bg-white sticky top-0 z-10">
                 <h3 class="font-bold text-lg text-[#263A77]" id="modal-title">Information</h3>
                 <button onclick="closeModal()" class="p-2 hover:bg-gray-100 rounded-full transition-colors"><i data-feather="x" class="w-5 h-5"></i></button>
