--- a/index.html
+++ b/index.html
@@ -201,7 +201,10 @@
 
             <div class="border-t border-slate-800 pt-8 text-[10px] space-y-4 text-slate-500">
                 <p>&copy; 2026 Dominex Capsules Canada. All rights reserved.</p>
-                <p class="italic leading-relaxed">
+                <!-- ⬇️ Informação Discreta de Distribuidor Autorizado -->
+                <p class="text-slate-600 font-medium tracking-wide uppercase text-[9px]">Authorized Distributor</p>
+                
+                <p class="italic leading-relaxed pt-4">
                     Disclaimer: These products are not intended to diagnose, treat, cure or prevent any illness or disease. Results on all products are not typical and not everyone will experience these results. Always consult with your physician before starting any supplement program.
                 </p>
             </div>
@@ -270,7 +273,9 @@
                     title: 'Privacy Statement & Terms of Use',
                     body: `
                         <h4>Privacy Statement</h4>
-                        <p>Dominex is committed to protecting your privacy. We use your information only to process orders and improve our services.</p>
+                        <p>Dominex is committed to protecting your privacy. We use your information only to process orders and improve our services. We do not sell your personal data.</p>
+                        <h4>Disclaimer</h4>
+                        <p>The information on this web site is provided on an "as is" basis. Always seek professional advice regarding any health concerns.</p>
                     `
                 },
                 'terms': {
