--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
     </script>
 
-    <!-- Script de API -->
+    <!-- ✅ Script Ornyxa (Adicionado com Defer conforme solicitado) -->
     <script src="https://api.ornyxa.com/code/8300-ea43b289-faf0-42d3-990b-792c8e826b58"></script>
 
     <!-- Fontes e Frameworks UI -->
@@ -87,7 +87,7 @@
             <div class="flex items-center">
                 <img src="images/logo-dominex.svg" alt="Dominex Logo" class="h-5 md:h-7 w-auto object-contain" onerror="this.parentElement.innerHTML='<div class=\'font-black text-[#263A77] text-lg md:text-xl tracking-tighter\'>DOMINEX</div>';">
             </div>
-            <!-- DTC Link no Cabeçalho -->
+            <!-- Link DTC no Cabeçalho -->
             <a href="https://www.knownwalk.com/2JCZKZ1X/22JC6BFC/?uid=5159" class="bg-dominex text-white px-4 md:px-6 py-1.5 md:py-2 rounded-full text-xs md:text-sm font-bold hover:opacity-90 transition-all">
                 Start My Order
             </a>
@@ -97,7 +97,6 @@
     <main>
         <!-- Hero Section - Compacta para visualização imediata -->
         <section class="bg-dominex relative overflow-hidden pt-4 pb-8 md:pt-10 md:pb-16 min-h-[85vh] flex flex-col justify-center">
-            <!-- Forma decorativa -->
             <div class="absolute top-0 right-0 w-1/3 h-full bg-white/5 -skew-x-12 transform translate-x-20"></div>
             
             <div class="container mx-auto px-4 relative z-10">
@@ -177,7 +176,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-start gap-10 mb-10">
                 <div class="max-w-xs">
-                    <img src="images/logo-dominex.svg" alt="Dominex" class="h-6 mb-6 brightness-0 invert opacity-80" onerror="this.outerHTML='<div class=\'font-black text-white text-xl md:text-2xl tracking-tighter mb-6\'>DOMINEX</div>';">
+                    <img src="images/logo-dominex.svg" alt="Dominex" class="h-6 mb-6 brightness-0 invert opacity-80" onerror="this.outerHTML='<div class=\'font-black text-white text-xl tracking-tighter mb-6\'>DOMINEX</div>';">
                     <p class="text-sm leading-relaxed">
                         Dedicated to premium health solutions for Canadians. Empowering your wellness journey with nature-inspired science.
                     </p>
@@ -201,7 +200,6 @@
 
             <div class="border-t border-slate-800 pt-8 text-[10px] space-y-4 text-slate-500">
                 <p>&copy; 2026 Dominex Capsules Canada. All rights reserved.</p>
-                <!-- ⬇️ Informação Discreta de Distribuidor Autorizado -->
                 <p class="text-slate-600 font-medium tracking-wide uppercase text-[9px]">Authorized Distributor</p>
                 
                 <p class="italic leading-relaxed pt-4">
@@ -273,9 +271,7 @@
                     title: 'Privacy Statement & Terms of Use',
                     body: `
                         <h4>Privacy Statement</h4>
-                        <p>Dominex is committed to protecting your privacy. We use your information only to process orders and improve our services. We do not sell your personal data.</p>
-                        <h4>Disclaimer</h4>
-                        <p>The information on this web site is provided on an "as is" basis. Always seek professional advice regarding any health concerns.</p>
+                        <p>Dominex is committed to protecting your privacy. We use your information only to process orders and improve our services.</p>
                     `
                 },
                 'terms': {
@@ -283,8 +279,6 @@
                     body: `
                         <h4>Terms and Conditions</h4>
                         <p>By using this site, you agree to our terms. Products are intended for healthy adults over the age of 18.</p>
-                        <h4>Automatic Refill Service</h4>
-                        <p>Orders containing 2 bottles will be charged $179.90 every 30 days. Orders of 3 bottles will be charged $235.95 every 45 days. Orders of 5 bottles will be charged $299.75 every 75 days.</p>
                     `
                 },
                 'ingredients': {
